# Gemini-Testcase-Building

./: Cargo.toml
documents/: mp-8660.txt  priority-iso.txt
prompt/: gen-requirements.txt  gen-test-case-description.txt  gen-test-cases.txt  gen-test-exp.txt  inital-prompt.txt  test-prompt.txt
responses/AI/: gen-requirements-response-html.txt  gen-test-cases-response-html.txt  inital-prompt-response-html.txt
src/: main.rs  prompt.rs  state.rs
templates/: test_1_template.html
