[package]
name = "Gemini-test-case"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
gemini_client_rs = "0.3.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
webbrowser = "1.0.4"
